# projeto-physic

./: README.md  pyproject.toml
sensor_ts_kit/: __init__.py  anomaly.py  cleaning.py  cli.py  features.py  io.py  models.py  pipeline.py  simulation.py  validation.py
sensor_ts_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cleaning.py  test_pipeline.py  test_simulation.py  test_validation.py
